# unifi-protect-exporter

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  OTEL.md  README.md  RELEASE.md  TODOS.txt  TRACING.md  docker-compose.yml  editorconfig  mkdocs.yml  pyproject.toml  snyk.sarif.json  wrangler.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  dependency-review.yml  docker-build.yml  python-publish.yml  scorecard.yml  stale.yml  summary.yml  trigger-docs-sync.yml  zizmor.yml
docs/: .meta.yml  404.md  500.md  collectors.md  config.md  deployment-operations.md  extending-collectors.md  getting-started.md  index.md  integration-dashboards.md  llms.txt  robots.txt  tags.md
docs/adr/: 001-collector-architecture.md  002-error-handling-strategy.md  index.md
docs/collectors/: .meta.yml
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mathjax.js  seo.js
docs/metrics/: .meta.yml  index.md  metrics.md  overview.md
docs/patterns/: api-response-formats.md  index.md  metric-collection-strategies.md
docs/stylesheets/: extra.css
scripts/: generate-docs.sh  test-docker-build.sh
src/unifi_protect_exporter/: __init__.py
src/unifi_protect_exporter/api/: __init__.py  client.py
src/unifi_protect_exporter/collectors/: __init__.py  system.py
src/unifi_protect_exporter/core/: __init__.py  collector.py  config.py  config_models.py  error_handling.py  logging.py  metrics.py
src/unifi_protect_exporter/core/constants/: __init__.py  metrics_constants.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_api_client.py  test_config.py  test_error_handling.py  test_metrics.py
